--- a/workshop/exercise-3/style.css
+++ b/workshop/exercise-3/style.css
@@ -1,1 +1,16 @@
 /* ...crickets... */
+
+.title {
+  font-size: 36px;
+}
+.title,
+.subtitle {
+  text-align: center;
+}
+
+.content {
+  font-family: "Comic Sans MS";
+}
+.emph {
+  font-style: italic;
+}
