--- a/workshop/exercise-2/style.css
+++ b/workshop/exercise-2/style.css
@@ -1,15 +1,14 @@
 p {
-
 }
 
 .one {
-
+  background-color: pink;
 }
 
 .two {
-
+  background-color: fuchsia;
 }
 
 .three {
-
+  font-size: 5em;
 }
