--- a/workshop/exercise-4/style.css
+++ b/workshop/exercise-4/style.css
@@ -1,27 +1,27 @@
-#centered {
-    text-align: center;
+.centered {
+  text-align: center;
 }
 
-.title {
-    font-size: 3rem;
+#title {
+  font-size: 3rem;
 }
 
-subtitle {
-    font-size: 1.5rem;
+#subtitle {
+  font-size: 1.5rem;
 }
 
-.div {
-    background-color: gray;
+div {
+  background-color: gray;
 }
 
-#li {
-    list-style-type: none;
+li {
+  list-style-type: none;
 }
 
-content {
-    text-decoration: underline;
+#content {
+  text-decoration: underline;
 }
 
-monospaced {
-    font-family: monospace;
+.monospaced {
+  font-family: monospace;
 }
