--- a/workshop/exercise-7/style.css
+++ b/workshop/exercise-7/style.css
@@ -1,12 +1,60 @@
 /* minor CSS reset */
 /* You should not need to change anything here */
-html, body, div, h1, h2, p, ul, li {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+h1,
+h2,
+p,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* ADD CSS BELOW */
+body {
+  margin: 20px;
+}
+h1,
+h2,
+h3 {
+  font-family: "bangers", sans-serif;
+}
+h1 {
+  font-size: 48px;
+  text-align: center;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 24px;
+  text-align: center;
+}
+.row {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+.col {
+  position: relative;
+		background-color:gray ;
+		border: 2px dashed rgb(65, 62, 62);
+}
+.images {
+  display: flex;
+}
+.image,
+.images {
+  margin: 0 5px;
+}
+
+.image {
+  border-radius: 4px;
+  height: 200px;
+}
